# TickersHistory

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  pyproject.toml  tickers.txt
.github/workflows/: main.yml
src/tickers_history/: main.py
tests/: test_main.py
