[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tickers_history"
version = "0.0.1"
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
tickers_history = "tickers_history.main:execute_main"